add: class notes of MD type

--- a/为元素绑定多个事件.html
+++ b/为元素绑定多个事件.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="button" value="按钮" id="btn" />
     //为元素绑定多个事件
+    //参数1：事件的类型type---事件的名字，e.g. click,没有on
+    //参数2：事件处理函数--（命名函数，匿名函数）
+    //参数3：布尔类型，目前就写false
 
+<script src="common.js"></script>
 </body>
 </html>
