--- a/为元素绑定多个事件.html
+++ b/为元素绑定多个事件.html
@@ -14,5 +14,11 @@
     //参数3：布尔类型，目前就写false
 
 <script src="common.js"></script>
+<script>
+console.log("测试");
+my$("btn").onclick=function(){
+    console.log("测试2");
+}
+</script>
 </body>
 </html>
